Remove mappers usage from common URI module.